[package]
name = "aoc22"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aoc-runner = "*"
aoc-runner-derive = "*"
grid = "0.9.0"
itertools = "0.10"
nom = "7.1.1"
parse-display = "0.7.0"
serde = { version = "1.0.150", features = ["derive"] }
serde_json = "1.0.89"
